--- a/simulator/public/index.html
+++ b/simulator/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>AHR Web Simulator</title>
+    <title>Simulator</title>
 
     <style>
         body{ background-color: ivory; }
@@ -32,7 +32,6 @@
     </script>
 </head>
 <body>
-    <h1>Fluffy Garbanzo</h1>
     <div style="width:100%" id="canvas-container">
         <div>
             <canvas id="sim-canvas" width=600 height=700></canvas>
